--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="background-image"><img src="bg.jpg" /></div>
 
       <div class="text">
-        <h1 class="main-text">Dive into the <br><span class="span1">Ultimate Gaming <br> Universe</span></h1>
+        <h1 class="main-text" id="content">Dive into the <br><span class="span1">Ultimate Gaming <br> Universe</span></h1>
         <p class="about">Explore a universe filled with immersive worlds, gripping stories, and limitless<br>
           possibilities.Engage, compete, and collaborate in a realm made for gamers</p>
         <button class="readbutton">Read more</button>
